Lined up input fields so that they are aligned correctly

--- a/css/todo-cards.css
+++ b/css/todo-cards.css
@@ -17,7 +17,7 @@
   display: inline-block;
   font-weight: 700;
   margin-bottom: 10px;
-  margin-left: 7px;
+  margin-left: 4px;
 }
 
 .delete-x {
@@ -26,7 +26,7 @@
   display: inline-block;
   float: right;
   height: 20px;
-  margin: 5px 5px 0 0;
+  margin: 5px 0 0 0;
   width: 29px;
 }
 
@@ -61,7 +61,7 @@
 .idea-body {
   color: #939598;
   margin-bottom: 10px;
-  margin-left: 35px;
+  margin-left: 29px;
 }
 
 .downvote,
@@ -126,7 +126,11 @@
 }
 
 .critical {
-  color: #ff0000;
+  color: #f00;
+}
+
+.flags {
+  margin-right: 1px;
 }
 
 .flags svg {
